@@ -27,8 +27,8 @@ Supported machines:
  - Intel machines
    * MacBook Pro Core Duo 15" (January 2006)
    * MacBook Pro Core Duo 17" (April 2006)
-   * MacBook Pro Core2 Duo 15" (October 2006 & June 2007)
-   * MacBook Pro Core2 Duo 17" (October 2006 & June 2007)
+   * MacBook Pro Core2 Duo 15" (October 2006, June 2007, February 2008)
+   * MacBook Pro Core2 Duo 17" (October 2006, June 2007, February 2008)
    * MacBook Core Duo (May 2006)
    * MacBook Core2 Duo (November 2006 & May 2007)
    * MacBook Core2 Duo Santa Rosa (November 2007)
