@@ -33,6 +33,7 @@ typedef enum
     MACHINE_MACBOOKPRO_1,
     MACHINE_MACBOOKPRO_2,
     MACHINE_MACBOOKPRO_3,
+    MACHINE_MACBOOKPRO_4,
 
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
